# AgenticDevelopments

./: .gitattributes  .gitignore  LICENSE  Pipfile  README.md  __init__.py  folder_search.py  pyproject.toml  test.ipynb  test.json
1.Templates_Collected/Tools Resources/: extracted_code.py  webcrawler.py
2.Templates_Tested/Agent_from_Scratch/: Agent.demo.ipynb  aisTools.py
2.Templates_Tested/Agents-workshop/: .gitignore  README.md  requirements.txt
2.Templates_Tested/Langgraph/: ReAct Agent - Langgraph.ipynb
3.Projects/: agenttask_stkexch.py
Archives/1.Deeplearning_Ai/: aisModels_crewai.py
Projects/: 03_llama_index_multi_doc_agent.ipynb  Lesson_6_Essay_Writer.ipynb  ReAct Agent - LG_from_scratch.ipynb  T202410_SelfRAG.ipynb  agentchat_groupchat_research.ipynb  research-assistant.ipynb  vc08-12_lighRag_QA_RAG_Agent.py
Tools/: arxiv.py  calculator_tools.py  currency_exchg.py  image.py  md2pdf.py  newspaper.py  search_tools.py  selenium_search.py  tool_search_wikip.py  tool_weather.py  weather_latlong.py  web.py  webcrawler.py  websearch.py
Tools Resources/: Tools.py
Working_Projects/: Essay_grading_system_langgraph.ipynb
code_excercises/: setup_environment_r2.py
phi-experiments/: aisAgents.py  aisTools.py  stocks.py  test.ipynb
tools Resources/: L5-tools-routing-apis-student.ipynb  L6-Agents.ipynb  QA-BOT Using OPENAI-Site.ipynb  Website Retrieval QA.ipynb  langgraph_adaptive_rag_local.ipynb  selfrag.ipynb  z-email-weather.py
utils/: __init__.py  aisModels.py  aisModels_lc.py  get_openrouter_models_list.py  openai_compat_clients.py
(+230 files in other folders)
