[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno",
    "groq",
    "ollama",
    "openai",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "pymupdf",
    "pypdf",
    "pypdfium",
    "vllm",
]
